--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "odin-testing-practice",
   "version": "1.0.0",
   "description": "Testing practice with Jest",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "webpack --mode production",
+    "dev": "webpack --mode development --watch"
   },
   "repository": {
     "type": "git",
@@ -16,7 +18,15 @@
     "url": "https://github.com/lightningwind/odin-testing-practice/issues"
   },
   "homepage": "https://github.com/lightningwind/odin-testing-practice#readme",
+  "devDependencies": {
+    "@babel/core": "^7.23.0",
+    "@babel/preset-env": "^7.22.20",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4"
+  },
   "dependencies": {
-    "jest": "^29.7.0"
+    "lodash": "^4.17.21"
   }
 }
